--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>The Basic Language of the Web: HTML</h2>
     
         <img 
-          src="laura-jones.jpg"
+          src="img/laura-jones.jpg"
           alt="laura-jones"
           width="50"
           height="50"
@@ -34,7 +34,7 @@
         </p>
 
         <img 
-          src="post-img.jpg" 
+          src="img/post-img.jpg" 
           alt="post-image" 
           width="500" 
           height="200" 
@@ -86,6 +86,43 @@
         Hopefully you learned something new here. See you next time!
       </p>
     </article>
+
+    <!-- Secondary information -->
+    <aside>
+      <h4>Related Posts</h4>
+      <ul>
+        <li>
+          <img 
+            src="img/related-1.jpg" 
+            alt="related-1"
+            width="75" 
+            height="75" 
+          />
+          <a href="#">How to Learn Web Development</a>
+          <p>By Jonas Schmedtmann</p>
+        </li>
+        <li>
+          <img
+            src="img/related-2.jpg" 
+            alt="related-2" 
+            width="75" 
+            height="75" 
+          />
+          <a href="#">The Unknown Powers of CSS</a>
+          <p>By Jim Dillon</p>
+        </li>
+        <li>
+          <img 
+            src="'img/related-3.jpg" 
+            alt="related-3" 
+            width="75" 
+            height="75" 
+          />
+          <a href="#">Why JavaScript is Awesome</a>
+          <p>by Matilda</p>
+        </li>
+      </ul>
+    </aside>
     
     <footer>
       Copyright &copy; 2021 by The Code Magazine.
