--- a/HTML-Markup/index.html
+++ b/HTML-Markup/index.html
@@ -113,7 +113,7 @@
         </li>
         <li>
           <img 
-            src="'img/related-3.jpg" 
+            src="img/related-3.jpg" 
             alt="related-3" 
             width="75" 
             height="75" 
