filled in the url for more information

--- a/HTML-Challenge/index.html
+++ b/HTML-Challenge/index.html
@@ -20,7 +20,7 @@
         Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe staple.
       </p>
   
-      <p><a href="#">More Information &rarr;</a></p>
+      <p><a href="https://www.converse.com">More Information &rarr;</a></p>
   
       <h4>Product Details</h4>
       <ul>
