--- a/HTML-Markup/index.html
+++ b/HTML-Markup/index.html
@@ -126,7 +126,7 @@
     </aside>
     
     <footer>
-      Copyright &copy; 2021 by The Code Magazine.
+      <p>Copyright &copy; 2021 by The Code Magazine.</p>
     </footer>
   </body>
 </html>
