using ids to identify elements

--- a/HTML-Markup/index.html
+++ b/HTML-Markup/index.html
@@ -30,7 +30,7 @@
           height="50"
         />
     
-        <p>
+        <p id="author">
           Posted by <strong>Laura Jones</strong> on Thursday, September 2st 2021
         </p>
 
@@ -126,7 +126,7 @@
     </aside>
     
     <footer>
-      <p>Copyright &copy; 2021 by The Code Magazine.</p>
+      <p id="copyright">Copyright &copy; 2021 by The Code Magazine.</p>
     </footer>
   </body>
 </html>
