remove bullet points from only the related list

--- a/HTML-Markup/index.html
+++ b/HTML-Markup/index.html
@@ -91,7 +91,7 @@
     <!-- Secondary information -->
     <aside>
       <h4>Related Posts</h4>
-      <ul>
+      <ul class="related">
         <li>
           <img 
             src="img/related-1.jpg" 
@@ -100,7 +100,7 @@
             height="75" 
           />
           <a href="#">How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li>
           <img
@@ -110,7 +110,7 @@
             height="75" 
           />
           <a href="#">The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img 
@@ -120,7 +120,7 @@
             height="75" 
           />
           <a href="#">Why JavaScript is Awesome</a>
-          <p>by Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
