--- a/HTML-Markup/index.html
+++ b/HTML-Markup/index.html
@@ -126,7 +126,7 @@
     </aside>
     
     <footer>
-      <p id="copyright">Copyright &copy; 2021 by The Code Magazine.</p>
+      <p id="copyright" class="copyright text">Copyright &copy; 2021 by The Code Magazine.</p>
     </footer>
   </body>
 </html>
