--- a/HTML-Challenge/index.html
+++ b/HTML-Challenge/index.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>HTML Challenge</title>
   </head>
   <body>
-    <article>
-      <h2>Converse Chuck Taylor All Start Low Top</h2>
+    <article class="product">
+      <h2 class="product-title">Converse Chuck Taylor All Start Low Top</h2>
       
       <img src="img/challenges.jpg" alt="Converse Chuck Taylor" width="250" height="250" />
       
-      <p><strong>$65.00</strong></p>
+      <p class="price"><strong>$65.00</strong></p>
   
-      <p>Free Shipping</p>
+      <p class="shipping">Free Shipping</p>
   
       <p>
         Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe staple.
       </p>
   
-      <p><a href="https://www.converse.com">More Information &rarr;</a></p>
+      <a class="more-info" href="https://www.converse.com">More Information &rarr;</a>
   
-      <h4>Product Details</h4>
-      <ul>
+      <h4 class="details-title">Product Details</h4>
+      <ul class="details-list">
         <li>Lightweight, durable canvas sneaker.</li>
         <li>Lightly padded footbed for added comfort.</li>
         <li>Iconic Chuck Taylor ankle patch.</li>
       </ul>
   
-      <button>Add to Cart</button>
+      <button class="add-cart">Add to Cart</button>
     </article>
   </body>
 </html>
