--- a/HTML-Markup/index.html
+++ b/HTML-Markup/index.html
@@ -129,5 +129,6 @@
         <p id="copyright" class="copyright text">Copyright &copy; 2021 by The Code Magazine.</p>
       </footer>
     </div>
+    <button>❤️ Like</button>
   </body>
 </html>
