added sale offset to article and now adding colors to select shoe in

--- a/HTML-Challenge/index.html
+++ b/HTML-Challenge/index.html
@@ -16,6 +16,8 @@
       <p class="price"><strong>$65.00</strong></p>
   
       <p class="shipping">Free Shipping</p>
+
+      <p class="sale">Sale</p>
   
       <p class="description">
         Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe staple.
@@ -23,6 +25,15 @@
       
       <div class="more-info-container">
         <a class="more-info" href="https://www.converse.com">More Information &rarr;</a>
+      </div>
+
+      <div class="colors">
+        <div class="color"></div>
+        <div class="color color-blue"></div>
+        <div class="color color-red"></div>
+        <div class="color color-yellow"></div>
+        <div class="color color-green"></div>
+        <div class="color color-brown"></div>
       </div>
   
       <h4 class="details-title">Product Details</h4>
