--- a/CSS-Layouts/index.html
+++ b/CSS-Layouts/index.html
@@ -29,9 +29,10 @@
             alt="laura-jones"
             width="50"
             height="50"
+            class="author-img"
           />
       
-          <p id="author">
+          <p id="author" class="author">
             Posted by <strong>Laura Jones</strong> on Thursday, September 2st 2021
           </p>
   
