--- a/HTML-Challenge/index.html
+++ b/HTML-Challenge/index.html
@@ -11,7 +11,7 @@
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Start Low Top</h2>
       
-      <img src="img/challenges.jpg" alt="Converse Chuck Taylor" class="converse" width="250" height="250" />
+      <img src="img/challenges.jpg" alt="Converse Chuck Taylor" class="product-img" width="250" height="250" />
       
       <div class="product-info">
         <p class="price"><strong>$65.00</strong></p>
