messing with order

--- a/CSS-Layouts/Float-Layout/flexbox.html
+++ b/CSS-Layouts/Float-Layout/flexbox.html
@@ -42,7 +42,7 @@
         /* FLEXBOX */
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
       }
     </style>
   </head>
