--- a/CSS-Layouts/Flex-Layout/flexbox.html
+++ b/CSS-Layouts/Flex-Layout/flexbox.html
@@ -36,22 +36,36 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 32px;
         margin: 40px;
 
         /* FLEXBOX */
         display: flex;
         align-items: center;
         justify-content: flex-start;
+        gap: 10px;
       }
 
       .el {
-        margin-right: 30px;
+        /* 
+        DEFAULTS:
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: auto; 
+        */
+
+        /* flex-basis: 100px; */
+        /* flex-shrink: 0; */
+        /* flex: 0 0 200px; */
+
+        /* flex-grow: 1; */
+        flex: 1;
       }
 
       .el--1 {
         align-self: flex-start;
         /* order: 2; */
+        flex-grow: 2;
       }
 
       .el--5 {
