fixed alignment of price and shipping

--- a/HTML-Challenge/index.html
+++ b/HTML-Challenge/index.html
@@ -21,9 +21,10 @@
         />
 
         <div class="product-info">
-          <p class="price"><strong>$65.00</strong></p>
-
-          <p class="shipping">Free Shipping</p>
+          <div class="product-price">
+            <p class="price"><strong>$65.00</strong></p>
+            <p class="shipping">Free Shipping</p>
+          </div>
 
           <p class="sale">Sale</p>
 
