--- a/HTML-Challenge/index.html
+++ b/HTML-Challenge/index.html
@@ -39,7 +39,7 @@
             >
           </div>
 
-          <div class="colors">
+          <div class="product-colors">
             <div class="color"></div>
             <div class="color color-blue"></div>
             <div class="color color-red"></div>
