--- a/HTML-Challenge/index.html
+++ b/HTML-Challenge/index.html
@@ -11,7 +11,7 @@
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Start Low Top</h2>
 
-      <div class="product-list">
+      <div class="container">
         <img
           src="img/challenges.jpg"
           alt="Converse Chuck Taylor"
