--- a/CSS-Layouts/CSS-Grid/css-grid.html
+++ b/CSS-Layouts/CSS-Grid/css-grid.html
@@ -42,14 +42,13 @@
         /* CSS GRID */
         display: grid;
         /* WIDTH */
-        grid-template-columns: 200px 200px 100px 100px;
+        grid-template-columns: 200px 200px 1fr 1fr;
         /* HEIGHT */
         grid-template-rows: 300px 200px;
         /* GAP */
-        gap: 30px;
-
-        column-gap: 30px;
-        row-gap: 60px;
+        /* gap: 30px; */
+        column-gap: 10px;
+        row-gap: 40px;
       }
 
       .container--2 {
