use fractions for all values

--- a/CSS-Layouts/CSS-Grid/css-grid.html
+++ b/CSS-Layouts/CSS-Grid/css-grid.html
@@ -42,9 +42,12 @@
         /* CSS GRID */
         display: grid;
         /* WIDTH */
-        grid-template-columns: 200px 200px 1fr 1fr;
+        /* grid-template-columns: 200px 200px 1fr 1fr; */
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+
         /* HEIGHT */
-        grid-template-rows: 300px 200px;
+        grid-template-rows: 1fr 1fr;
+
         /* GAP */
         /* gap: 30px; */
         column-gap: 10px;
