--- a/CSS-Layouts/CSS-Grid/css-grid.html
+++ b/CSS-Layouts/CSS-Grid/css-grid.html
@@ -41,11 +41,15 @@
 
         /* CSS GRID */
         display: grid;
+
         /* WIDTH */
         /* grid-template-columns: 200px 200px 1fr 1fr; */
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        /* grid-template-columns: 1fr 1fr 1fr auto; */
+        grid-template-columns: repeat(4, 1fr);
 
         /* HEIGHT */
+        /* grid-template-rows: 300px 200px; */
+        /* grid-template-rows: 1fr 1fr; */
         grid-template-rows: 1fr 1fr;
 
         /* GAP */
