row and columns furthered demonstrated

--- a/CSS-Layouts/CSS-Grid/css-grid.html
+++ b/CSS-Layouts/CSS-Grid/css-grid.html
@@ -14,7 +14,7 @@
       }
       .el--3 {
         background-color: green;
-        height: 150px;
+        /* height: 150px; */
       }
       .el--4 {
         background-color: goldenrod;
@@ -50,7 +50,8 @@
         /* HEIGHT */
         /* grid-template-rows: 300px 200px; */
         /* grid-template-rows: 1fr 1fr; */
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr auto;
+        height: 500px;
 
         /* GAP */
         /* gap: 30px; */
