--- a/CSS-Layouts/CSS-Grid/css-grid.html
+++ b/CSS-Layouts/CSS-Grid/css-grid.html
@@ -14,7 +14,7 @@
       }
       .el--3 {
         background-color: green;
-        /* height: 150px; */
+        height: 150px;
       }
       .el--4 {
         background-color: goldenrod;
@@ -50,13 +50,23 @@
         /* HEIGHT */
         /* grid-template-rows: 300px 200px; */
         /* grid-template-rows: 1fr 1fr; */
-        grid-template-rows: 1fr auto;
-        height: 500px;
+        grid-template-rows: 1fr 1fr;
+        /* height: 500px; */
 
         /* GAP */
         /* gap: 30px; */
-        column-gap: 10px;
+        column-gap: 20px;
         row-gap: 40px;
+      }
+
+      .el--2 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+      }
+
+      .el--8 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
       }
 
       .container--2 {
@@ -83,7 +93,7 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
     </div>
 
