--- a/CSS-Layouts/CSS-Grid/css-grid.html
+++ b/CSS-Layouts/CSS-Grid/css-grid.html
@@ -60,12 +60,18 @@
       }
 
       .el--2 {
-        grid-column: 1 / 2;
+        /* grid-column: 1 / span 4; */
+        grid-column: 1 / -1;
         grid-row: 2 / 3;
+      }
+
+      .el--6 {
+        /* grid-row: 3 / 5; */
       }
 
       .el--8 {
         grid-column: 2 / 3;
+        /* grid-row: 1 / span 2; */
         grid-row: 1 / 2;
       }
 
