reverted layout bto implement css grid

--- a/CSS-Layouts/CSS-Grid/css-grid.html
+++ b/CSS-Layouts/CSS-Grid/css-grid.html
@@ -107,8 +107,8 @@
         Aligning items INSIDE cells: moving items around 
         inside the cells 
         */
-        align-items: center;
-        justify-items: center;
+        align-items: end;
+        justify-items: end;
       }
 
       .el--3 {
