--- a/HTML-Challenge/index.html
+++ b/HTML-Challenge/index.html
@@ -11,53 +11,53 @@
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Start Low Top</h2>
 
-      <div class="container">
-        <img
-          src="img/challenges.jpg"
-          alt="Converse Chuck Taylor"
-          class="product-img"
-          width="250"
-          height="250"
-        />
+      <!-- <div class="container"> -->
+      <img
+        src="img/challenges.jpg"
+        alt="Converse Chuck Taylor"
+        class="product-img"
+        width="250"
+        height="250"
+      />
 
-        <div class="product-info">
-          <div class="product-price">
-            <p class="price"><strong>$65.00</strong></p>
-            <p class="shipping">Free Shipping</p>
-          </div>
-
-          <p class="sale">Sale</p>
-
-          <p class="description">
-            Ready to dress up or down, these classic canvas Chucks are an
-            everyday wardrobe staple.
-          </p>
-
-          <div class="more-info-container">
-            <a class="more-info" href="https://www.converse.com"
-              >More Information &rarr;</a
-            >
-          </div>
-
-          <div class="product-colors">
-            <div class="color"></div>
-            <div class="color color-blue"></div>
-            <div class="color color-red"></div>
-            <div class="color color-yellow"></div>
-            <div class="color color-green"></div>
-            <div class="color color-brown"></div>
-          </div>
+      <div class="product-info">
+        <div class="product-price">
+          <p class="price"><strong>$65.00</strong></p>
+          <p class="shipping">Free Shipping</p>
         </div>
 
-        <div class="product-details">
-          <h4 class="details-title">Product Details</h4>
-          <ul class="details-list">
-            <li>Lightweight, durable canvas sneaker.</li>
-            <li>Lightly padded footbed for added comfort.</li>
-            <li>Iconic Chuck Taylor ankle patch.</li>
-          </ul>
+        <p class="sale">Sale</p>
+
+        <p class="description">
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
+
+        <div class="more-info-container">
+          <a class="more-info" href="https://www.converse.com"
+            >More Information &rarr;</a
+          >
+        </div>
+
+        <div class="product-colors">
+          <div class="color"></div>
+          <div class="color color-blue"></div>
+          <div class="color color-red"></div>
+          <div class="color color-yellow"></div>
+          <div class="color color-green"></div>
+          <div class="color color-brown"></div>
         </div>
       </div>
+
+      <div class="product-details">
+        <h4 class="details-title">Product Details</h4>
+        <ul class="details-list">
+          <li>Lightweight, durable canvas sneaker.</li>
+          <li>Lightly padded footbed for added comfort.</li>
+          <li>Iconic Chuck Taylor ankle patch.</li>
+        </ul>
+      </div>
+      <!-- </div> -->
 
       <button class="add-cart">Add to Cart</button>
     </article>
