--- a/Design/index.html
+++ b/Design/index.html
@@ -99,7 +99,7 @@
                 </li>
               </ul>
               <div class="chair-price">
-                <strong>250€</strong>
+                <strong>$100.00</strong>
                 <a href="#" class="btn btn--small">Add to cart</a>
               </div>
             </div>
@@ -124,7 +124,7 @@
                 </li>
               </ul>
               <div class="chair-price">
-                <strong>525€</strong>
+                <strong>$250.00</strong>
                 <a href="#" class="btn btn--small">Add to cart</a>
               </div>
             </div>
@@ -149,7 +149,7 @@
                 </li>
               </ul>
               <div class="chair-price">
-                <strong>1450€</strong>
+                <strong>$600.00</strong>
                 <a href="#" class="btn btn--small">Add to cart</a>
               </div>
             </div>
