--- a/Design/index.html
+++ b/Design/index.html
@@ -158,9 +158,9 @@
       </section>
 
       <footer>
-        Copyright &copy; 2027 by Jonas Schmedtmann. Part of "Build Responsive
-        Real-World Websites with HTML and CSS" online course. Use for learning
-        purposes only.
+        Copyright &copy; 2022 by Arthur. Part of "Build Responsive Real-World
+        Websites with HTML and CSS" online course. Use for learning purposes
+        only.
       </footer>
     </div>
   </body>
